--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,20 @@
-Flask==0.8
-Jinja2==2.6
-Werkzeug==0.8.3
-certifi==0.0.8
-chardet==1.0.1
-distribute==0.6.24
-gunicorn==0.14.2
-requests==0.11.1
+dj-database-url==0.4.2
+gunicorn==19.7.1
+paramiko==1.16.0
+Sphinx==1.3.5
+sphinx-rtd-theme==0.1.9
+spyder==2.3.8
+SQLAlchemy==1.0.12
+statsmodels==0.6.1
+sympy==1.0
+tables==3.2.2
+terminado==0.5
+toolz==0.7.4
+tornado==4.3
+traitlets==4.2.1
+unicodecsv==0.14.1
+Werkzeug==0.11.4
+whitenoise==3.3.0
+xlrd==0.9.4
+XlsxWriter==0.8.4
+xlwt==1.0.0
