--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,8 @@
+appdirs==1.4.3
 dj-database-url==0.4.2
 Django==1.10.6
 gunicorn==19.7.1
-paramiko==1.16.0
-Sphinx==1.3.5
-sphinx-rtd-theme==0.1.9
-spyder==2.3.8
-SQLAlchemy==1.0.12
-sympy==1.0
-terminado==0.5
-toolz==0.7.4
-tornado==4.3
-traitlets==4.2.1
-unicodecsv==0.14.1
-Werkzeug==0.11.4
-whitenoise==3.3.0
-xlrd==0.9.4
-XlsxWriter==0.8.4
-xlwt==1.0.0
-psycopg2==2.6.2
+packaging==16.8
+psycopg2==2.7.1
+pyparsing==2.2.0
+six==1.10.0
